--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "mysql": "Server=192.168.33.199;Database=minimal_api;Uid=JOAOPEDROGABRIEL;Pwd=0950j*pG;"
+  }
 }
